testing/framework/resources/Functional/Passing/sandbox/hive/2.q
select * from orders limit 5;
