testing/framework/resources/Functional/Failing/sandbox/logs/1.q
select * from logs limit 2;
